# genai-engenharia-processos

./: .gitignore  README.md  requirements.txt
case_engprocessos/: README.md  pyproject.toml  tools.py
case_engprocessos/src/case_engprocessos/: crew.py  main.py  streamlit_app.py
case_engprocessos/src/case_engprocessos/config/: agents.yaml  tasks.yaml
case_engprocessos/src/case_engprocessos/tools/: __init__.py  gerador_json_backlog_tool.py
