[project]
name = "case_engprocessos"
version = "0.1.0"
description = "case_engprocessos using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4"
]

[project.scripts]
case_engprocessos = "case_engprocessos.main:run"
run_crew = "case_engprocessos.main:run"
train = "case_engprocessos.main:train"
replay = "case_engprocessos.main:replay"
test = "case_engprocessos.main:test"
run_with_trigger = "case_engprocessos.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
